--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 #list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)
 
+# Compiler flags.
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11 -O2 -ffast-math -ftree-vectorize ${EXTRA_FLAGS}")
+
 project(serialdv)
 
 set(serialdv_SOURCES
