--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,15 @@ cmake_minimum_required(VERSION 3.1.0)
 
 project(serialdv)
 
+set(MAJOR_VERSION 1)
+set(MINOR_VERSION 1)
+set(PATCH_VERSION 0)
+set(VERSION_STRING ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION})
+set(VERSION ${VERSION_STRING})
+
+include(GNUInstallDirs)
+set(LIB_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}") # "lib" or "lib64"
+
 option(BUILD_TOOL "Build dvtest tool" ON)
 
 # use, i.e. don't skip the full RPATH for the build tree
@@ -66,10 +75,12 @@ target_include_directories(dvtest PUBLIC
     ${CMAKE_CURRENT_BINARY_DIR}
 )
 
+set_target_properties(serialdv PROPERTIES VERSION ${VERSION} SOVERSION ${MAJOR_VERSION})
+
 target_link_libraries(dvtest serialdv)
 
 install(TARGETS dvtest DESTINATION bin)
 endif(BUILD_TOOL AND NOT WIN32)
 
-install(TARGETS serialdv DESTINATION lib)
+install(TARGETS serialdv LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 install(FILES ${serialdv_HEADERS} DESTINATION include/${PROJECT_NAME})
